pod.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hello-world
  namespace: argo-hello-world
  labels:
    app: hello-world

spec:
  replicas: 0
  selector:
    matchLabels:
      app: hw-app
  template:
    metadata:
      labels:
        app: hw-app
    spec:
      containers:
        - name: hello-world
          image: rancher/hello-world:latest
          ports:
            - name: web
              containerPort: 80
          valueFrom:
            - configMapRef:
                name: hw-configmap
