pod-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hw-load-balancer
spec:
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
