hello-world.yml
apiVersion: v1
kind: Service
metadata:
  name: hw-load-balancer
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw-app
  namespace: argo-hello-world-perso
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hw-app
  template:
    metadata:
      labels:
        app: hw-app
    spec:
      containers:
        - name: hello-world
          image: rancher/hello-world:latest
          ports:
            - containerPort: 80
          valueFrom:
            - configMapRef:
                name: hw-configmap
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw-ingress
spec:
  rules:
  - host: hw-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hw-load-balancer
            port:
              number: 80
