pod-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw-ingress
spec:
  rules:
  - host: hw-app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-world
            port:
              number: 80
